Graduate work version 2012-05-10 from old repo

--- a/doc/graduate_work/project_report.tex
+++ b/doc/graduate_work/project_report.tex
@@ -555,8 +555,8 @@ $A_{i + 1}$ - следующая перед точкой $A_{i}$ в контур
 \end{flushleft}
 \begin{flushleft}
   \begin{figure}[ht]
-    \includegraphics[clip, width=13cm]{img/pic-step-3.jpg}
-    \caption{Перемещения точки $A_{i}$. TODO: $v_{-1}, v_{+1}$.}\label{pic-step-3}
+    \includegraphics[clip, width=13cm]{img/pic-step-3-1.jpg}
+    \caption{Перемещения точки $A_{i}$}\label{pic-step-3}
   \end{figure}
 \end{flushleft}
 \begin{flushleft}
