--- a/README
+++ b/README
@@ -2,11 +2,20 @@ Polyhedra correction Library
 ============================
 
 For more information see Introduction to the graduate work.
-Polyhedron is a repository for correcttion spatial polyhedra that arrises from 3D-modeling of diamonds. Current methods for creating of 3D-models cause great calculation errors. So we need to have algorithms to correct them.
+Polyhedron is a repository for correcttion spatial polyhedra 
+that arrises from 3D-modeling of diamonds. Current methods 
+for creating of 3D-models cause great calculation errors. 
+So we need to have algorithms to correct them.
+
 1). Some auxuliary techniques:
 1.1). Intersection of polyhedron with plane (done)
 2). Local correction
-2.1). Joining nearest facets which have almost the same plane (done).
-2.2). Moving one point and then the correction of polyhedron, because after movement flatness of some facets is corrupted (done).
+2.1). Joining nearest facets which have almost the same 
+plane (done).
+2.2). Moving one point and then the correction of polyhedron, 
+because after movement flatness of some facets is corrupted 
+(done).
 3). Global correction.
-3.1). Minimization of summary error of approximation (we are approximating shadow contours which appear during photographing the diamond) -- in progess.
+3.1). Minimization of summary error of approximation (we are 
+approximating shadow contours which appear during photographing 
+the diamond) -- in progess.
