[DOC] thesis: Add section for problem formulation

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -20,7 +20,7 @@
 
 
 %opening
-\title{Восстановление многогранника по набору его теневых контуров \\ Обзор материлов и план работы}
+\title{Восстановление многогранника по набору его теневых контуров \\ Обзор материалов и план работы}
 \author{Палачев Илья}
 
 \begin{document}
@@ -28,5 +28,37 @@
 \maketitle
 
 \tableofcontents
+
+\section{Постановка задачи}
+
+
+Имеется некоторый физический камень, геометрическая форма которого
+представляет собой многогранник. Имеется установка, которая позволяет получать
+информацию о его форме следующим образом:
+ 
+\begin{enumerate}
+  \item Камень жестко закрепляется одной своей гранью на горизонтальной
+  подставке.
+  \item Производится фотографирование камня вдоль некоторого горизонтального
+  фиксированного направления $\nu_{0}$.
+  \item Результатом фотографирования является монохромное изображение без
+  каких-либо внутренних ребер, иными словами, "тень" камня.
+  \item Затем подставка вместе с закрепленным на ней камнем поворачивается на
+  фиксированный угол $\alpha_{0}$ и получается новая фотография камня.
+\end{enumerate}
+ 
+Этот процесс повторяется $K = \frac{2 \pi}{\alpha_{0}}$ раз, пока не получатся
+фотографии камня по всем направлениям $\alpha_{k} = k \alpha_{0}$, где
+$k = 1, 2, \ldots, K$. Все эти фотографии подвергаются обработке, в результате
+которых получаются так называемые \textbf{теневые контуры} -- многоугольники,
+лежащие в плоскостях, ортогональных горизонтальным векторам, образующим углы
+$\alpha_{k} = k \alpha_{0}$ с осью $Ox$. 
+
+
+
+
+\section{Исторический обзор смежных вопросов}
+
+\section{Предлагаемый подход}
 
 \end{document}
