[DOC] thesis: begin of support function description

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -44,7 +44,8 @@
   \item Результатом фотографирования является монохромное изображение без
   каких-либо внутренних ребер, иными словами, "тень" камня.
   \item Затем подставка вместе с закрепленным на ней камнем поворачивается на
-  фиксированный угол $\alpha_{0}$ и получается новая фотография камня.
+  фиксированный угол $\alpha_{0}$ в горизонтальной плоскости и процесс
+  повторяется начиная с пункта 2.
 \end{enumerate}
  
 Этот процесс повторяется $K = \frac{2 \pi}{\alpha_{0}}$ раз, пока не получатся
@@ -54,10 +55,74 @@ $k = 1, 2, \ldots, K$. Все эти фотографии подвергаютс
 лежащие в плоскостях, ортогональных горизонтальным векторам, образующим углы
 $\alpha_{k} = k \alpha_{0}$ с осью $Ox$. 
 
+Требуется построить трехмерный многогранник, форма которого наилучшим образом
+соответствует исходному камню. При этом под качеством построенной модели
+подразумевается следующее:
 
-
+\begin{enumerate}
+ \item Тени модельного многогранника наилучшим образом приближают тени,
+ полученные из измерений.
+ \item В многограннике характерные вершины и грани не разделены на несколько
+ вершин и граней.
+\end{enumerate}
 
 \section{Исторический обзор смежных вопросов}
+
+Далее приводится обзор некоторых статей, которые были написаны в целях решения
+задач, схожих с рассматриваемой. Как оказалось, особенно большое сходство было
+найдено с задачей оценки опорной функции в геометрической томографии. В целях
+последовательности изложения сначала приводится понятие опорной функции, а
+затем задачи и алгоритмы их решения.
+
+\subsection{Понятие опорной функции выпуклого тела}
+
+Для простоты будем рассматривать выпуклые тела в трехмерном пространстве
+$\mathbb{R}^{3}$, содержащие в своей внутренности начало координат $O$.
+Для некоторых понятий будем давать определения и формулировки для случая
+произвольной конечной размерности.
+
+Как известно, выпуклое тело можно однозначно представить как пересечение 
+полупространств всех его касательных плоскостей 
+$K = \bigcap \limits_{x \in K} R_{x}$, где $R_{x}$ -- то из двух
+полупространств, на которые плоскость $\pi_{x}$, касательная к телу $K$ в
+точке $x$, делит $\mathbb{R}^{3}$, которое содержит в себе целиком все тело
+$K$. Всякому выпуклому телу можно поставить в соответствие набор касательных 
+плоскостей $\pi_{x}$, по которым его можно построить. Обратное неверно: не
+всякому произвольному набору плоскостей можно поставить в соответствие тело,
+касающееся всех этих плоскостей.
+
+Всякую касательную плоскость $\pi_{x}$ можно однозначно охарактеризовать
+единичным вектором нормали $u_{x}$ и расстоянием $h_{x}$ от начала координат 
+$O$ до плоскости. Поскольку две разные касательные плоскости не могут иметь
+одинаковые векторы нормалей, то можно рассматривать множество всех касательных
+плоскостей выпуклого тела как функцию, определенную на всех единичных векторах
+$u \in S_{2}$:
+
+$$h_{K}: S^{2} \to \mathbb{R}_{+}$$
+
+Более общее понятие включающее в себя выше указанное было введено в 1903 году
+Минковским.
+
+\begin{flushleft}
+\textbf{Определение}. Будем называть \textbf{опорной функцией} выпуклого тела
+$K \subset \mathbb{R}^{n}$ следующую функцию 
+$h_{K}: \mathbb{R}^{n} \to \mathbb{R}_{+}$:
+
+$$h_{K}(u) = \max \limits_{x \in K}(x, u)$$.
+\end{flushleft}
+
+Если взять некоторую точку $u_{0}$ на единичной сфере $S^{n - 1}$, и вычислить
+в ней значение опорной функции $h_{K}{u_{0}$, то по этим данным можно построить
+касательную плоскость к выпуклому телу в некоторой (неизвестной!) точке
+$x \in K$. Такую плоскость (в контексте, когда нет информации о положении точки
+касания) принято называть опорной плоскостью.
+
+\begin{flushleft}
+ \textbf{Определение}. \textbf{Опорной плоскотью} выпуклого тела $K$ по
+ направлению $u \in S^{n - 1}$ называется плоскость с нормалью $u$, расстояние
+ от которой до начала коорлинат равно $h_{K}(u)$.
+\end{flushleft}
+
 
 \section{Предлагаемый подход}
 
