[DOC] thesis: Fix spelling mistakes

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -108,11 +108,11 @@ $$h_{K}: S^{2} \to \mathbb{R}_{+}$$
 $K \subset \mathbb{R}^{n}$ следующую функцию 
 $h_{K}: \mathbb{R}^{n} \to \mathbb{R}_{+}$:
 
-$$h_{K}(u) = \max \limits_{x \in K}(x, u)$$.
+$$h_{K}(u) = \max \limits_{x \in K}(x, u)$$
 \end{flushleft}
 
 Если взять некоторую точку $u_{0}$ на единичной сфере $S^{n - 1}$, и вычислить
-в ней значение опорной функции $h_{K}{u_{0}$, то по этим данным можно построить
+в ней значение опорной функции $h_{K}(u_{0})$, то по этим данным можно построить
 касательную плоскость к выпуклому телу в некоторой (неизвестной!) точке
 $x \in K$. Такую плоскость (в контексте, когда нет информации о положении точки
 касания) принято называть опорной плоскостью.
@@ -120,7 +120,7 @@ $x \in K$. Такую плоскость (в контексте, когда не
 \begin{flushleft}
  \textbf{Определение}. \textbf{Опорной плоскотью} выпуклого тела $K$ по
  направлению $u \in S^{n - 1}$ называется плоскость с нормалью $u$, расстояние
- от которой до начала коорлинат равно $h_{K}(u)$.
+ от которой до начала координат равно $h_{K}(u)$
 \end{flushleft}
 
 
