[DOC] thesis: add first bibtex usage

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -112,10 +112,10 @@ $$h_{K}(u) = \max \limits_{x \in K}(x, u)$$
 \end{flushleft}
 
 Если взять некоторую точку $u_{0}$ на единичной сфере $S^{n - 1}$, и вычислить
-в ней значение опорной функции $h_{K}(u_{0})$, то по этим данным можно построить
-касательную плоскость к выпуклому телу в некоторой (неизвестной!) точке
-$x \in K$. Такую плоскость (в контексте, когда нет информации о положении точки
-касания) принято называть опорной плоскостью.
+в ней значение опорной функции $h_{K}(u_{0})$, то по этим данным можно
+построить касательную плоскость к выпуклому телу в некоторой (неизвестной!)
+точке $x \in K$. Такую плоскость (в контексте, когда нет информации о положении
+точки касания) принято называть опорной плоскостью.
 
 \begin{flushleft}
  \textbf{Определение}. \textbf{Опорной плоскотью} выпуклого тела $K$ по
@@ -123,7 +123,22 @@ $x \in K$. Такую плоскость (в контексте, когда не
  от которой до начала координат равно $h_{K}(u)$
 \end{flushleft}
 
+Очевидно, что опорная функция выпуклого тела обладает следующим свойством:
+
+$$h_{K}(\lambda u) = \lambda h_{K}(u)$$
+
+Следовательно, для практики достаточно иметь дело только с ограничением опорной
+функции на единичную сферу. В статье ~\cite{journals/jmiv/KarlKVW96}
+
 
 \section{Предлагаемый подход}
+
+%\begin{thebibliography}{99}                    % Список литературы
+%\addcontentsline{toc}{section}{Список литературы}
+
+\bibliographystyle{plain}
+\bibliography{KarlKVW96}
+
+%\end{thebibliography}
 
 \end{document}
