[DOC] thesis: Restructure the bibtex citations

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -128,7 +128,8 @@ $$h_{K}(u) = \max \limits_{x \in K}(x, u)$$
 $$h_{K}(\lambda u) = \lambda h_{K}(u)$$
 
 Следовательно, для практики достаточно иметь дело только с ограничением опорной
-функции на единичную сферу. В статье ~\cite{journals/jmiv/KarlKVW96}
+функции на единичную сферу. В статье ~\cite{journals/jmiv/KarlKVW96},
+~\cite{journals/pami/PrinceW90}
 
 
 \section{Предлагаемый подход}
@@ -137,7 +138,7 @@ $$h_{K}(\lambda u) = \lambda h_{K}(u)$$
 %\addcontentsline{toc}{section}{Список литературы}
 
 \bibliographystyle{plain}
-\bibliography{KarlKVW96}
+\bibliography{references}
 
 %\end{thebibliography}
 
