--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -17,3 +17,21 @@
   volume = 6,
   year = 1996
 }
+
+@article{journals/pami/PrinceW90,
+  added-at = {2011-11-07T00:00:00.000+0100},
+  author = {Prince, Jerry L. and Willsky, Alan S.},
+  biburl = {http://www.bibsonomy.org/bibtex/2b76d481fd0e2ae6907f729223218f568/dblp},
+  ee = {http://doi.ieeecomputersociety.org/10.1109/34.50623},
+  interhash = {086d413106a6a3b688c6963302825ded},
+  intrahash = {b76d481fd0e2ae6907f729223218f568},
+  journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+  keywords = {dblp},
+  number = 4,
+  pages = {377-389},
+  timestamp = {2011-11-07T00:00:00.000+0100},
+  title = {Reconstructing Convex Sets from Support Line Measurements.},
+  url = {http://dblp.uni-trier.de/db/journals/pami/pami12.html#PrinceW90},
+  volume = 12,
+  year = 1990
+}
