[DOC] thesis: found more bibtex citations

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -129,7 +129,9 @@ $$h_{K}(\lambda u) = \lambda h_{K}(u)$$
 
 Следовательно, для практики достаточно иметь дело только с ограничением опорной
 функции на единичную сферу. В статье ~\cite{journals/jmiv/KarlKVW96},
-~\cite{journals/pami/PrinceW90}
+~\cite{journals/pami/PrinceW90}, ~\cite{Gardner_Kiderlen_Milanfar_2006},
+~\cite{journals/cviu/GhoshK98}, ~\cite{journals/tit/GoldenshlugerS06},
+~\cite{journals/pami/HallT99}, 
 
 
 \section{Предлагаемый подход}
