--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/references.bib
@@ -1,3 +1,96 @@
+@article{journals/pami/GardnerK09,
+  added-at = {2011-11-07T00:00:00.000+0100},
+  author = {Gardner, Richard J. and Kiderlen, Markus},
+  biburl = {http://www.bibsonomy.org/bibtex/25c42f05e8947416ddde88af98fad2f59/dblp},
+  ee = {http://doi.ieeecomputersociety.org/10.1109/TPAMI.2008.190},
+  interhash = {474f401d76806ea26a8f1d97c87e36d4},
+  intrahash = {5c42f05e8947416ddde88af98fad2f59},
+  journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+  keywords = {dblp},
+  number = 3,
+  pages = {556-562},
+  timestamp = {2011-11-07T00:00:00.000+0100},
+  title = {A New Algorithm for 3D Reconstruction from Support Functions.},
+  url = {http://dblp.uni-trier.de/db/journals/pami/pami31.html#GardnerK09},
+  volume = 31,
+  year = 2009
+}
+
+@article{Gardner_Kiderlen_Milanfar_2006,
+  added-at = {2013-11-10T22:34:13.000+0100},
+  author = {Gardner, Richard J. and Kiderlen, Markus and Milanfar, Peyman},
+  biburl = {http://www.bibsonomy.org/bibtex/21f90b6d9216d0213dbf655edd06cb635/ytyoun},
+  doi = {10.1214/009053606000000335},
+  interhash = {ff0b1e7b03fded0c2f6845ef6f2f4401},
+  intrahash = {1f90b6d9216d0213dbf655edd06cb635},
+  journal = {The Annals of Statistics},
+  keywords = {brightness convex},
+  month = jun,
+  number = 3,
+  pages = {1331-1374},
+  publisher = {Institute of Mathematical Statistics},
+  timestamp = {2013-11-10T22:34:13.000+0100},
+  title = {Convergence of algorithms for reconstructing convex bodies and directional measures},
+  volume = 34,
+  year = 2006
+}
+
+@article{journals/cviu/GhoshK98,
+  added-at = {2006-09-11T00:00:00.000+0200},
+  author = {Ghosh, Pijush K. and Kumar, K. Vinod},
+  biburl = {http://www.bibsonomy.org/bibtex/28cb737c030b84bf6b195832ea9f866c5/dblp},
+  date = {2006-09-11},
+  description = {dblp},
+  ee = {http://dx.doi.org/10.1006/cviu.1998.0674},
+  interhash = {582cac489fffce6f9b5b582aa7b22304},
+  intrahash = {8cb737c030b84bf6b195832ea9f866c5},
+  journal = {Computer Vision and Image Understanding},
+  keywords = {dblp},
+  number = 3,
+  pages = {379-403},
+  timestamp = {2006-09-11T00:00:00.000+0200},
+  title = {Support Function Representation of Convex Bodies, Its Application in Geometric Computing, and Some Related Representations.},
+  url = {http://dblp.uni-trier.de/db/journals/cviu/cviu72.html#GhoshK98},
+  volume = 72,
+  year = 1998
+}
+
+@article{journals/tit/GoldenshlugerS06,
+  added-at = {2011-10-31T00:00:00.000+0100},
+  author = {Goldenshluger, Alexander and Spokoiny, Vladimir},
+  biburl = {http://www.bibsonomy.org/bibtex/2d8de0bb8cb3cfb762c968809c1d58bc4/dblp},
+  ee = {http://dx.doi.org/10.1109/TIT.2006.871053},
+  interhash = {61999113149f5dbe847625938a880d90},
+  intrahash = {d8de0bb8cb3cfb762c968809c1d58bc4},
+  journal = {IEEE Transactions on Information Theory},
+  keywords = {dblp},
+  number = 4,
+  pages = {1322-1334},
+  timestamp = {2011-10-31T00:00:00.000+0100},
+  title = {Recovering convex edges of an image from noisy tomographic data.},
+  url = {http://dblp.uni-trier.de/db/journals/tit/tit52.html#GoldenshlugerS06},
+  volume = 52,
+  year = 2006
+}
+
+@article{journals/pami/HallT99,
+  added-at = {2011-11-07T00:00:00.000+0100},
+  author = {Hall, Peter and Turlach, Berwin A.},
+  biburl = {http://www.bibsonomy.org/bibtex/2ec25154f4c17de3b5e28496c52db02c2/dblp},
+  ee = {http://doi.ieeecomputersociety.org/10.1109/34.754588},
+  interhash = {721116113f94caeed1c5d33aa46c2aea},
+  intrahash = {ec25154f4c17de3b5e28496c52db02c2},
+  journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+  keywords = {dblp},
+  number = 3,
+  pages = {225-234},
+  timestamp = {2011-11-07T00:00:00.000+0100},
+  title = {On the Estimation of a Convex Set With Corners.},
+  url = {http://dblp.uni-trier.de/db/journals/pami/pami21.html#HallT99},
+  volume = 21,
+  year = 1999
+}
+
 @article{journals/jmiv/KarlKVW96,
   added-at = {2010-03-05T00:00:00.000+0100},
   author = {Karl, William Clement and Kulkarni, Sanjeev R. and Verghese, George C. and Willsky, Alan S.},
@@ -16,6 +109,42 @@
   url = {http://dblp.uni-trier.de/db/journals/jmiv/jmiv6.html#KarlKVW96},
   volume = 6,
   year = 1996
+}
+
+@inproceedings{conf/compgeom/MehlhornNSSSSU96,
+  added-at = {2002-12-13T00:00:00.000+0100},
+  author = {Mehlhorn, Kurt and Näher, Stefan and Schilz, Thomas and Schirra, Stefan and Seel, Michael and Seidel, Raimund and Uhrig, Christian},
+  biburl = {http://www.bibsonomy.org/bibtex/2df06cd588685090a9bcdd63f7000bcf2/dblp},
+  booktitle = {Symposium on Computational Geometry},
+  date = {2002-12-13},
+  description = {dblp},
+  ee = {http://doi.acm.org/10.1145/237218.237344},
+  interhash = {a61039e0d024afa477df8cf8578379d8},
+  intrahash = {df06cd588685090a9bcdd63f7000bcf2},
+  keywords = {dblp},
+  pages = {159-165},
+  timestamp = {2002-12-13T00:00:00.000+0100},
+  title = {Checking Geometric Programs or Verification of Geometric Structures.},
+  url = {http://dblp.uni-trier.de/db/conf/compgeom/compgeom96.html#MehlhornNSSSSU96},
+  year = 1996
+}
+
+@article{journals/comgeo/MehlhornNSSSSU99,
+  added-at = {2011-07-04T00:00:00.000+0200},
+  author = {Mehlhorn, Kurt and Näher, Stefan and Seel, Michael and Seidel, Raimund and Schilz, Thomas and Schirra, Stefan and Uhrig, Christian},
+  biburl = {http://www.bibsonomy.org/bibtex/28c3e058a6af3798794a7bbef71ebb816/dblp},
+  ee = {http://dx.doi.org/10.1016/S0925-7721(98)00036-4},
+  interhash = {ab58f7b747186cf8864bd83436894192},
+  intrahash = {8c3e058a6af3798794a7bbef71ebb816},
+  journal = {Comput. Geom.},
+  keywords = {dblp},
+  number = {1-2},
+  pages = {85-103},
+  timestamp = {2011-07-04T00:00:00.000+0200},
+  title = {Checking geometric programs or verification of geometric structures.},
+  url = {http://dblp.uni-trier.de/db/journals/comgeo/comgeo12.html#MehlhornNSSSSU99},
+  volume = 12,
+  year = 1999
 }
 
 @article{journals/pami/PrinceW90,
