[DOC] thesis: fix spelling

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -39,8 +39,8 @@
 \begin{enumerate}
   \item Камень жестко закрепляется одной своей гранью на горизонтальной
   подставке.
-  \item Производится фотографирование камня вдоль некоторого горизонтального
-  фиксированного направления $\nu_{0}$.
+  \item Производится фотографирование камня вдоль некоторого фиксированного
+  горизонтального направления $\nu_{0}$.
   \item Результатом фотографирования является монохромное изображение без
   каких-либо внутренних ребер, иными словами, "тень" камня.
   \item Затем подставка вместе с закрепленным на ней камнем поворачивается на
