[DOC] thesis: end section about support function

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -128,20 +128,18 @@ $$h_{K}(u) = \max \limits_{x \in K}(x, u)$$
 $$h_{K}(\lambda u) = \lambda h_{K}(u)$$
 
 Следовательно, для практики достаточно иметь дело только с ограничением опорной
-функции на единичную сферу. В статье ~\cite{journals/jmiv/KarlKVW96},
-~\cite{journals/pami/PrinceW90}, ~\cite{Gardner_Kiderlen_Milanfar_2006},
-~\cite{journals/cviu/GhoshK98}, ~\cite{journals/tit/GoldenshlugerS06},
-~\cite{journals/pami/HallT99}, 
+функции на единичную сферу. В статье \cite{journals/jmiv/KarlKVW96} вводится
+понятие \textbf{приведенной опорной функции}:
+
+$$H_{K} (u) = h_{K} (\frac{u}{||u||})$$
+
+которая в действительности педставляет собой расстояние от начала координат
+$\mathbb{O}$ до опорной гиперплоскости по направлению $u$.
 
 
 \section{Предлагаемый подход}
 
-%\begin{thebibliography}{99}                    % Список литературы
-%\addcontentsline{toc}{section}{Список литературы}
-
 \bibliographystyle{plain}
 \bibliography{references}
-
-%\end{thebibliography}
 
 \end{document}
