[DOC] thesis: begin section about Prince&Willsky

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -136,9 +136,38 @@ $$H_{K} (u) = h_{K} (\frac{u}{||u||})$$
 которая в действительности педставляет собой расстояние от начала координат
 $\mathbb{O}$ до опорной гиперплоскости по направлению $u$.
 
+Более подробно свойства опрной функции рассматриваются в статье
+\cite{journals/cviu/GhoshK98}.
+
+%(TODO: прочесть и законспектировать)
+
+\subsection{Восстановление выпуклого многоугольника по измерениям его опорной
+функции (по статье Prince, Willsky)}
+
+В работе \cite[Prince - Willsky (1990)]{journals/pami/PrinceW90}
+рассматриваются алгоритмы для восстановления двумерных выпуклых тел по
+измерениям их опорных функций. Изначально изучение данной проблемы было
+мотивировано задачей из компьютерной томографии. А именно, в томографии
+делаются измерения интегралов плотности поглощения излучения объектом вдоль
+различных фиксированных прямых. Допустим, что известны интегралы плотности
+поглощения по пучку прямых $L(t, \theta)$, где угол $\theta$ фиксирован. Тогда
+по этой информации можно определить положение двух опорных прямых к данному
+объекту.
+
+По имеющимся измерениям опорной функции можно потроить грубое приближение
+расмматриваемого тела -- путем обыкновенного пересечения полуплоскостей,
+соответствующих опорным прямым. Однако на практике измерения подвержены
+ошибкам и известны лишь с некоторой точностью. Так, может оказаться, что
+после пересечения построенное тело будет касаться не всех заданных прямых.
+Это приводит к тому, что всего одно грубое измеренние может заблокировать
+воздействие других (более точных) измерений на результат.
+
+
+
 
 \section{Предлагаемый подход}
 
+\newpage
 \bibliographystyle{plain}
 \bibliography{references}
 
