[DOC] thesis: enable back references

--- a/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
+++ b/Documentation/i.palachev/Thesis/ReportAboutReconstruction/i.palachev_ReportAboutReconstruction.tex
@@ -18,9 +18,15 @@
 \renewcommand{\topfraction}{1}
 \renewcommand{\textfraction}{0}
 
+% The following code enables back references:
+\usepackage{color} 
+\definecolor{darkgreen}{rgb}{0,.5,0} 
+\usepackage[unicode,colorlinks,filecolor=blue,citecolor=darkgreen,dvips,pagebackref]{hyperref}
+
 
 %opening
-\title{Восстановление многогранника по набору его теневых контуров \\ Обзор материалов и план работы}
+\title{Восстановление многогранника по набору его теневых контуров \\ Обзор
+материалов и план работы}
 \author{Палачев Илья}
 
 \begin{document}
